nav fix flex-wrap

--- a/src/assets/styles/components/_navigation.scss
+++ b/src/assets/styles/components/_navigation.scss
@@ -1,4 +1,8 @@
 .navigation {
+  ul {
+    flex-wrap: wrap;
+  }
+
   li {
     margin-right: 20px;
 
